RESOLVED FIXED277303
REGRESSION (276531@main): State dropdown is invisible, unable to send feedback via Bunnings.com.au
https://bugs.webkit.org/show_bug.cgi?id=277303
Summary REGRESSION (276531@main): State dropdown is invisible, unable to send feedbac...
Tim Nguyen (:ntim)
Reported 2024-07-29 17:22:10 PDT
Attachments
Tim Nguyen (:ntim)
Comment 1 2024-07-29 17:25:27 PDT
Tim Nguyen (:ntim)
Comment 2 2024-07-29 17:27:10 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/47348
EWS
Comment 3 2024-07-29 21:14:42 PDT
Committed 281544@main (72ac253c4d48): <https://commits.webkit.org/281544@main> Reviewed commits have been landed. Closing PR #31429 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.