Cherry-pick 72ac253c4d48. rdar://130520487

REGRESSION (276531@main): State dropdown is invisible, unable to send feedback via Bunnings.com.au
    https://bugs.webkit.org/show_bug.cgi?id=277303
    rdar://130520487

    Reviewed by Cameron McCormack.

    We should not be cancelling animations in the case where we're starting in a hidden subtree, then animating with a keyframe that changes
    the display value away from none. Make sure we notify about the newly created keyframe instead.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/display-none-dont-cancel.tentative-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/display-none-dont-cancel.tentative.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/display-none-to-display-block-dont-cancel.tentative-expected.txt: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/display-none-to-display-block-dont-cancel.tentative.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/display-none-to-display-block-expected.xht: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-animations/display-none-to-display-block.html: Added.
    * Source/WebCore/style/StyleTreeResolver.cpp:
    (WebCore::Style::TreeResolver::createAnimatedElementUpdate):

    Canonical link: https://commits.webkit.org/281544@main

Canonical link: https://commits.webkit.org/280938.181@safari-7619-branch